Added Tuna mayo html
Added tuna mayo recipe page, with a link to it as well as a link back home in the recipe page.

--- a/recipes/tuna-mayo-onigiri.html
+++ b/recipes/tuna-mayo-onigiri.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Tuna-Mayo Onigiri</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/tuna-mayo-onigiri.html">Tuna Mayo Onigiri</a>
+    <h1>Tuna Mayo Onigiri</h1>
+    <a href="../index.html">Home</a>
 </body>
 </html>
