Added recipe information
Added description, ingredients, and steps to tuna mayo page

--- a/recipes/tuna-mayo-onigiri.html
+++ b/recipes/tuna-mayo-onigiri.html
@@ -7,6 +7,57 @@
 </head>
 <body>
     <h1>Tuna Mayo Onigiri</h1>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c2/Onigiri_001.jpg" alt="picture of onigiri rice balls" width="400px" height="300px"/>
+    <p>A Classic Japanese Rice Ball Filled With Creamy Tuna!</p>
+    <strong>Ingredients (Makes 4-6 onigiri)</strong>
+    <ul>
+        <li>1 can (5 oz / ~140g) tuna in water or oil, drained</li>
+        <li>2-3 tbsp Japanese mayonnaise (e.g., Kewpie; adjust to taste)</li>
+        <li>1/2 tsp soy sauce (optional)</li>
+        <li>A small pinch of salt and pepper (optional)</li>
+        <li>2 cups cooked Japanese short-grain rice (warm, not hot)</li>
+        <li>1/4 tsp salt (to season rice or for your hands when shaping)</li>
+        <li>Roasted seaweed (nori) sheets, cut into strips or rectangles</li>
+        <li>Sesame seeds or furikake for garnish</li>
+    </ul>
+    <strong>Steps</strong>
+    <ol>
+        <li>
+            <strong>Prepare the Filling</strong>
+            <ul>
+                <li>In a bowl, mix the drained tuna with mayonnaise until creamy.</li>
+                <li>Add soy sauce or a pinch of salt and pepper if desired.</li>
+                <li>Set aside.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Prepare Your Work Area</strong>
+            <ul>
+                <li>Have a small bowl of water and salt nearby. Wet your hands slightly and rub a tiny bit of salt on your palms — this helps season the rice and prevents sticking.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Shape the Onigiri</strong>
+            <ul>
+                <li>Take a handful of warm rice (about 1/2 cup).</li>
+                <li>Flatten it slightly in your hand and make a small indent in the center.</li>
+                <li>Spoon about 1-1.5 tsp of tuna mayo into the indent.</li>
+                <li>Gently mold the rice around the filling to seal it, then shape into a triangle (or round ball if easier).</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Wrap With Nori (Optional)</strong>
+            <ul>
+                <li>Wrap a strip or rectangle of nori around the onigiri. You can place it on the bottom or fully wrap it depending on preference.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Serve or Store</strong>
+            <ul>
+                <li>Best enjoyed the same day, but they can be refrigerated for up to 1 day.</li>
+            </ul>
+        </li>
+    </ol>
     <a href="../index.html">Home</a>
 </body>
 </html>
